--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,12 @@
     <string name="action_settings">Settings</string>
     <string name="about_dialog_text">
 <![CDATA[
-<b>Aplicativo dos Carros 2015</b><br>
-Versao %s<br><br>
-<a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
-<a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
-<a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
+<b>Aplicativo Carros Modelo 2016</b><br>
+Versão %s - 1<br><br>
+<a href="http://www.najasoftware.com.br">http://www.najasoftware.com.br</a><br><br>
 	]]>
 	</string>
-    <string name="about_dialog_title">Livro Android</string>
+    <string name="about_dialog_title">Carros [Modelo]</string>
     <string name="action_video_browser">Browser</string>
     <string name="action_video_player">Video Player</string>
     <string name="action_video_videoview">VideoView</string>
@@ -52,8 +50,8 @@ Versao %s<br><br>
 
 
     <!-- N -->
-    <string name="nav_drawer_username">Ricardo Lecheta</string>
-    <string name="nav_drawer_email">rlecheta@gmail.com</string>
+    <string name="nav_drawer_username">Vinícius Paulino</string>
+    <string name="nav_drawer_email">vinydos3@gmail.com</string>
     <string name="nome">Nome</string>
 
     <!-- O -->
@@ -69,9 +67,7 @@ Versao %s<br><br>
     <string name="video">Vídeo</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
-
+    <string name="hello_blank_fragment">Hello blank fragment aqui </string>
 
 
 </resources>
