Termino de Web View
Foi adicionado funcionalidades referentes ao webview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
 <![CDATA[
 <b>Aplicativo Carros Modelo 2016</b><br>
 Versão %s - 1<br><br>
-<a href="http://www.najasoftware.com.br">http://www.najasoftware.com.br</a><br><br>
+<a href="https://github.com/vinypaulino">http://GitHub Vinícius Paulino</a><br><br>
+<a href="https://www.facebook.com/vinicius.paulino.37">Facebook Vinícius Paulino</a><br><br>
 	]]>
 	</string>
     <string name="about_dialog_title">Carros [Modelo]</string>
