--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
 
     <!-- A -->
     <string name="action_about">Sobre</string>
-    <string name="action_settings">Settings</string>
     <string name="about_dialog_text">
 <![CDATA[
 <b>Aplicativo Carros Modelo 2016</b><br>
@@ -13,10 +12,6 @@ Versão %s - 1<br><br>
 	]]>
 	</string>
     <string name="about_dialog_title">Carros [Modelo]</string>
-    <string name="action_video_browser">Browser</string>
-    <string name="action_video_player">Video Player</string>
-    <string name="action_video_videoview">VideoView</string>
-    <string name="Atualizar">Atualizar</string>
 
     <!-- C -->
     <string name="carros">Carros</string>
@@ -28,8 +23,6 @@ Versão %s - 1<br><br>
 
     <!-- E -->
     <string name="esportivos">Esportivos</string>
-    <string name="editar">Editar</string>
-    <string name="excluir">Excluir</string>
 
     <!-- L -->
     <string name="luxo">Luxo</string>
@@ -37,30 +30,17 @@ Versão %s - 1<br><br>
 
     <!-- M -->
     <string name="mapa">Mapa</string>
-    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>
-    <string name="msg_error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G.</string>
     <!-- menu_frag_mapa.xml -->
-    <string name="mapa_normal">Modo Normal</string>
-    <string name="mapa_satelite">Modo Satélite</string>
-    <string name="mapa_terreno">Modo Terreno</string>
-    <string name="mapa_hibrido">Modo Híbrido</string>
-    <string name="mapa_location_directions">Direções</string>
-    <string name="mapa_location_carro">Localização do Carro</string>
-    <string name="mapa_zoom_in">Zoom (+)</string>
-    <string name="mapa_zoom_out">Zoom (-)</string>
 
 
     <!-- N -->
     <string name="nav_drawer_username">Vinícius Paulino</string>
     <string name="nav_drawer_email">vinydos3@gmail.com</string>
-    <string name="nome">Nome</string>
 
     <!-- O -->
     <string name="ok">OK</string>
 
     <!-- S -->
-    <string name="share">Share</string>
-    <string name="sobre">Sobre</string>
     <string name="site_do_livro">Site do Livro</string>
 
     <!-- V -->
@@ -68,7 +48,7 @@ Versão %s - 1<br><br>
     <string name="video">Vídeo</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment aqui </string>
+    <string name="error_conexao_indisponivel">Conexao Indisponivel</string>
 
 
 </resources>
